2004-03-26 Niklas Knutsson  <nq@altern.org>

	* Sexagesimal number display
	* Fix prefixes with simple display format
	* Sexagesimal number input
	* (2 > 0) + (2 > 0) = 2 * (2 > 0)
	* Polynomial division refinements

2004-03-25 Niklas Knutsson  <nq@altern.org>

	* Roman numerals
	* Polynomial division

2004-03-24 Niklas Knutsson  <nq@altern.org>

	* Fix printing of complex numbers with negative imaginary part and no real part
	* re() and im()
	* Fix unit conversion
	* Imperial and U.S. capacity units
	* Fix nested product() and sum()
	* Correct treatment of (), "", '', and {} in text argument

2004-03-23 Niklas Knutsson  <nq@altern.org>

	* Symbols for sum, product and ohm
	* derangements()
	* sum() and product() corresponding to the signs
	* sum() -> total()
	* Reorganisation of function categories

2004-03-22 Niklas Knutsson  <nq@altern.org>

	* Complete convert to best unit

2004-03-21 Niklas Knutsson  <nq@altern.org>

	* Make result context menu context sensitive
	* Protect intValue and longIntValue against overflow
	* Fix printing of exponent 1E...
	* Convert to best unit (beginning)
	* Convert to base units

2004-03-20 Niklas Knutsson  <nq@altern.org>

	* Define sin and cos as expressions
	* e^(i*pi) = -1 ...
	* ln -1 = i*pi, ln i = i*pi/2, ln -i = -i*pi/2
	* permanent()
	* Print short currency unit before value
	* Factorize independent of giac
	* Make my own derive function default

2004-03-19 Niklas Knutsson  <nq@altern.org>

	* asec, acsc, acot, sech, csch, coth, asech, acsch, acoth
	* cis
	* As we now have complex number, define inverse trigonometric functions as expressions
	* sec, csc, cot
	* "CAS" -> "Calculus"
	* Update my own derive function and enable it if giac is not used
	* Fix ln() argument so that e can pass through

2004-03-18 Niklas Knutsson  <nq@altern.org>

	* Show error when custom condition is not met
	* area, ascii and char functions
	* Limits function should accept negative numbers for end. Fixes trimmed, weighted and winsorized mean.