@@ -4,7 +4,6 @@
 * Do not recalculate plot data when it has not changed
 * Instant apply for all parameters in plot
 * Plot-functions
-* Sexagesimal numbers
 * Check if unit is used on delete
 * Replace pointers to unit when unit type has changed (a different object must be created)
 * Export to CSV file
