@@ -67,6 +67,12 @@ DECLARE_BUILTIN_FUNCTION(InverseFunction);
 DECLARE_BUILTIN_FUNCTION(GCDFunction);
 DECLARE_BUILTIN_FUNCTION(DaysFunction);
 DECLARE_BUILTIN_FUNCTION(YearFracFunction);
+DECLARE_BUILTIN_FUNCTION(WeekFunction);
+DECLARE_BUILTIN_FUNCTION(WeekdayFunction);
+DECLARE_BUILTIN_FUNCTION(MonthFunction);
+DECLARE_BUILTIN_FUNCTION(DayFunction);
+DECLARE_BUILTIN_FUNCTION(YearFunction);
+DECLARE_BUILTIN_FUNCTION(TimeFunction);
 DECLARE_BUILTIN_FUNCTION(FactorialFunction);
 DECLARE_BUILTIN_FUNCTION(BinomialFunction);
 DECLARE_BUILTIN_FUNCTION(AbsFunction);
